--- a/projects/public/src/app/views/layout/users-approval/user-item/user-item.component.html
+++ b/projects/public/src/app/views/layout/users-approval/user-item/user-item.component.html
@@ -68,8 +68,8 @@
                   <td>{{ userItem.mobileNumber }}</td>
                 </tr>
                 <tr>
-                  <th scope="row">E-mail :</th>
-                  <td>{{ userItem.email }}</td>
+                  <th scope="row">Gender :</th>
+                  <td>{{ userItem.gender }}</td>
                 </tr>
                 <tr>
                   <th scope="row">Location :</th>
@@ -88,10 +88,10 @@
 
           <div class="row">
             <div class="col-lg-6">
-              <h4 class="card-title">National Id</h4>
+              <h4 class="card-title">National Id Front</h4>
               <div class="">
                 <img
-                  src="assets/images/small/img-2.jpg"
+                  src="{{ natiolalIdFront }}"
                   class="img-fluid"
                   alt="Responsive image"
                 />
@@ -102,10 +102,10 @@
               </div>
             </div>
             <div class="col-lg-6">
-              <h4 class="card-title">License Id</h4>
+              <h4 class="card-title">National Id Back</h4>
               <div class="">
                 <img
-                  src="assets/images/small/img-2.jpg"
+                  src="{{ natiolalIdBack }}"
                   class="img-fluid"
                   alt="Responsive image"
                 />
